--- a/views/start/interests.ejs
+++ b/views/start/interests.ejs
@@ -4,82 +4,265 @@
     <title>Frieyo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1,minimum-scale=1.0, maximum-scale=1.0">
     <link rel='stylesheet' href='/stylesheets/start.css'/>
-    <link rel='stylesheet' href='/stylesheets/bootstrap.css'/>
+    <link rel='stylesheet' href='/stylesheets/pills.css'/>
   </head>
   <body>
-    <div class="container">
+  <div class="container">
+    <div class="centerInterests row">
+      <p class="select">Select 3 or more activities to personalize your feed</p>
+      <input class="interestBox pad-75-left" type="text" placeholder="Search for activities">
+      <p class="topicText">Popular Activities</p>
       <div class="row">
-        <div class="col-md-6 inline-block"> 
-          <h1 class="interestStatement">What are your interests?</h1>
-          <input class="interestBox" type="text" placeholder="Search for something you love...">
+        <div class="column one-quarter">
+          <div class="blackBackground">
+            <div class="topicImage" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
+            <p class="text-inside-image">Fashion</p>
+            </div>
+          </div>
         </div>
-        <div class="col-md-2 inline-block">
-          <a onclick="intereststoContact();"> <button class="continue">Continue</button> </a>
+        <div class="column one-quarter">
+          <div class="blackBackground">
+            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="row inline-block">
+        <div class="column one-quarter">
+          <div class="blackBackground">
+            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
+            </div>
+          </div>
+        </div>
+        <div class="column one-quarter">
+          <div class="blackBackground">
+            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
+            </div>
+          </div>
+        </div>
+        <div class="column one-quarter">
+          <div class="blackBackground">
+            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
+            </div>
+          </div>
+        </div>
+        <div class="column one-quarter">
+          <div class="blackBackground">
+            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
+            </div>
+          </div>
+        </div>
+        <div class="column one-quarter">
+          <div class="blackBackground">
+            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
+            </div>
+          </div>
+        </div>
+        <div class="column one-quarter">
+          <div class="blackBackground">
+            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
+            </div>
+          </div>
+        </div>
+         <div class="column one-quarter">
+          <div class="blackBackground">
+            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
+            </div>
+          </div>
+        </div>
+        <div class="column one-quarter">
+          <div class="blackBackground">
+            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
+            </div>
+          </div>
+        </div>
+        <div class="column one-quarter">
+          <div class="blackBackground">
+            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
+            </div>
+          </div>
+        </div>
+        <div class="column one-quarter">
+          <div class="blackBackground">
+            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
+            </div>
+          </div>
+        </div>
+         <div class="column one-quarter">
+          <div class="blackBackground">
+            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
+            </div>
+          </div>
+        </div>
+        <div class="column one-quarter">
+          <div class="blackBackground">
+            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
+            </div>
+          </div>
+        </div>
+        <div class="column one-quarter">
+          <div class="blackBackground">
+            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
+            </div>
+          </div>
+        </div>
+        <div class="column one-quarter">
+          <div class="blackBackground">
+            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
+            </div>
+          </div>
+        </div>
+         <div class="column one-quarter">
+          <div class="blackBackground">
+            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
+            </div>
+          </div>
+        </div>
+        <div class="column one-quarter">
+          <div class="blackBackground">
+            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
+            </div>
+          </div>
+        </div>
+        <div class="column one-quarter">
+          <div class="blackBackground">
+            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
+            </div>
+          </div>
+        </div>
+        <div class="column one-quarter">
+          <div class="blackBackground">
+            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
+            </div>
+          </div>
+        </div>
+         <div class="column one-quarter">
+          <div class="blackBackground">
+            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
+            </div>
+          </div>
+        </div>
+        <div class="column one-quarter">
+          <div class="blackBackground">
+            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
+            </div>
+          </div>
+        </div>
+        <div class="column one-quarter">
+          <div class="blackBackground">
+            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
+            </div>
+          </div>
+        </div>
+        <div class="column one-quarter">
+          <div class="blackBackground">
+            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
+            </div>
+          </div>
+        </div>
+         <div class="column one-quarter">
+          <div class="blackBackground">
+            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
+            </div>
+          </div>
+        </div>
+        <div class="column one-quarter">
+          <div class="blackBackground">
+            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
+            </div>
+          </div>
+        </div>
+        <div class="column one-quarter">
+          <div class="blackBackground">
+            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
+            </div>
+          </div>
+        </div>
+        <div class="column one-quarter">
+          <div class="blackBackground">
+            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
+            </div>
+          </div>
+        </div>
+         <div class="column one-quarter">
+          <div class="blackBackground">
+            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
+            </div>
+          </div>
+        </div>
+        <div class="column one-quarter">
+          <div class="blackBackground">
+            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
+            </div>
+          </div>
+        </div>
+        <div class="column one-quarter">
+          <div class="blackBackground">
+            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
+            </div>
+          </div>
+        </div>
+        <div class="column one-quarter">
+          <div class="blackBackground">
+            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
+            </div>
+          </div>
+        </div>
+         <div class="column one-quarter">
+          <div class="blackBackground">
+            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
+            </div>
+          </div>
+        </div>
+        <div class="column one-quarter">
+          <div class="blackBackground">
+            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
+            </div>
+          </div>
+        </div>
+        <div class="column one-quarter">
+          <div class="blackBackground">
+            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
+            </div>
+          </div>
+        </div>
+        <div class="column one-quarter">
+          <div class="blackBackground">
+            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
+            </div>
+          </div>
+        </div>
+         <div class="column one-quarter">
+          <div class="blackBackground">
+            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
+            </div>
+          </div>
+        </div>
+        <div class="column one-quarter">
+          <div class="blackBackground">
+            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
+            </div>
+          </div>
+        </div>
+        <div class="column one-quarter">
+          <div class="blackBackground">
+            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
+            </div>
+          </div>
+        </div>
+        <div class="column one-quarter">
+          <div class="blackBackground">
+            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
+            </div>
+          </div>
+        </div>
+        <div class="column one-quarter">
+          
+        </div>
 
-        <div class="chip">
-          Sports
-        </div>
-        <div class="chip">
-          News
-        </div>
-        <div class="chip">
-          Music
-        </div>
-        <div class="chip">
-          Entertainment
-        </div>
-        <div class="chip">
-          Lifestyle
-        </div>
-        <div class="chip">
-          Tech
-        </div>
-        <div class="chip">
-          Science
-        </div>
-        <div class="chip">
-          Design
-        </div>
-        <div class="chip">
-          Art & Culture
-        </div>
-        <div class="chip">
-          Government & Politics
-        </div>
-        <div class="chip">
-          Gaming
-        </div>
-        <div class="chip">
-          Non-Profits
-        </div>
-        <div class="chip">
-          Fitness
-        </div>
-        <div class="chip">
-          Humor
-        </div>
-        <div class="chip">
-          Travel
-        </div>
-        <div class="chip">
-          Movies
-        </div>
-        <div class="chip">
-          Parenting
-        </div>
-        <div class="chip">
-          Fashion
-        </div>
-        <div class="chip">
-          Writing
-        </div>
       </div>
+
     </div>
+  </div>
+
   <script src="/javascripts/start.js" type="text/javascript"></script> 
   </body>
 </html>
