--- a/public/stylesheets/landing.css
+++ b/public/stylesheets/landing.css
@@ -44,8 +44,8 @@ a {
 =======================================================================*/
 
 .container {
-  display: flex;
-  justify-content: center;
+  display:-webkit-flex;
+  -webkit-justify-content: center;
 }
 .center {
   width: 800px;
@@ -279,7 +279,7 @@ p.grayAbout {
                             Arrow
 =======================================================================*/
 .arrow {
-  position: fixed;
+  position: absolute;
   left: 50%;
   top: 155%;
   margin-left:-20px;
