using stackoverflow solution

--- a/views/start/interests.ejs
+++ b/views/start/interests.ejs
@@ -13,11 +13,10 @@
       <input class="interestBox pad-75-left" type="text" placeholder="Search for activities">
       <p class="topicText">Popular Activities</p>
       <div class="row">
-        <div class="column one-quarter">
-          <div class="blackBackground">
-            <div class="topicImage" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
-            <p class="text-inside-image">Fashion</p>
-            </div>
+        <div class="column one-quarter"> 
+          <div class="my-container">  
+            <h3>Fashion</h3>
+            <img src="https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3" />
           </div>
         </div>
         <div class="column one-quarter">
