--- a/public/stylesheets/start.css
+++ b/public/stylesheets/start.css
@@ -252,10 +252,12 @@ input.interestBox {
 
 .blackBackground {
   background-color: black;
+  z-index: -1;
 }
 
 .opacityFilter {
-  background-color: rgba(255,0,0,0.7);
+  opacity: 0.8;
+  position: relative;
 
 }
 
@@ -283,6 +285,29 @@ input.interestBox {
   color: white;
   font-size: 24px;
   font-weight: 500;
+  z-index: 1;
+}
+
+.my-container {
+    position: relative;
+    background: #171616;
+    overflow: hidden;
+}
+.my-container h3 {
+    padding: 50px;
+    text-align: center;
+    z-index: 2;
+    position: relative;
+    color: #fff;
+} 
+.my-container img {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: auto;
+    z-index: 1;
+    opacity: 0.6;
 }
 
 /* =========================================================================
